# opinion_heimer

./: README.md  pyproject.toml
.github/workflows/: ci.yml
opinion_heimer/: before_migrate.py  hooks.py  modules.txt
opinion_heimer/opinion_heimer/doctype/opinion/: opinion.js  opinion.json  opinion.py  test_opinion.py
opinion_heimer/opinion_heimer/doctype/poll/: poll.js  poll.json  poll.py  test_poll.py
opinion_heimer/opinion_heimer/doctype/poll_options/: poll_options.json  poll_options.py
opinion_heimer/opinion_heimer/doctype/poll_user/: poll_user.json  poll_user.py
opinion_heimer/public/js/: desk.js
